welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: type mismatch;
 found   : Unit
 required: Int
  else if (tea>=5 && candy >= 5){return 1}}
       ^